<resources>
    <string name="facebook_app_id" translatable="false">343660272660579</string>

    <string name="app_name">Easy Math for Girls</string>
    <string name="logo">logo</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="start_the_game">Get started</string>
    <string name="login_in">Sign in to Play Games</string>
    <string name="login_out">Sign out from Play Games</string>
    <string name="learn">Learn</string>
    <string name="practice">Practice</string>
    <string name="choose_to_continue">Choose to continue</string>
    <string name="more">More</string>
    <string name="next">Next</string>
    <string name="lesson1">Lesson 1/3</string>
    <string name="lesson2">Lesson 2/3</string>
    <string name="lesson3">Lesson 3/3</string>
    <string name="lesson_complete">Lesson\ncomplete!</string>
    <string name="unit_complete">Unit\nсomplete</string>
    <string name="tap_to_continue">Continue</string>
    <string name="try_again">Try again</string>
    <string name="congrates">CONGRATS!</string>
    <string name="score">Score</string>
    <string name="more_apps">More apps</string>
    <string name="rate_app">Rate the app</string>

    <string name="invite_friends">Invite Friends</string>
    <string name="invite_friends_description">Share the app with your friends.</string>
    <string name="rate_app_description">Rate and help us make a better app!</string>
    <string name="rate_5_star">Rate 5 stars</string>
    <string name="cancel_button">Cancel</string>
    <string name="rate_app_dialog">Support us with a 5-star rating in the App Store!</string>
    <string name="invite_friends_message">Try it to be sure!
        \nThe best app for studying math I\'ve ever used.
    </string>
    <string name="not_now">Not now</string>
    <string name="ok_text">OK</string>

    <!--More Apps-->
    <string name="oxford_name">3000 English Words</string>
    <string name="oxford_description">The Fastest way to learn most useful English words</string>
    <string name="geo_quiz_name">Geo Quiz</string>
    <string name="geo_quiz_description">Play, learn and get smarter in geography!</string>
    <string name="easy_math_name">Easy Math</string>
    <string name="easy_math_description">Play, learn and improve your skills with Easy Math</string>
    <string name="install_the_app">Install</string>
    <string name="oops">Oops!</string>
    <string name="one_more_app">Like this app? Try one more</string>
    <string name="try_more_apps">Try more of our new beautiful apps!</string>

    <string name="choose_level">Choose the level</string>
    <string name="you_complete_lesson_without_wrong">You completed this lesson without wrong answers!</string>
    <string name="you_complete_unit_without_wrong">You completed this practice without wrong answers!</string>
    <string name="you_complete_practice_without_wrong">You completed this practice with wrong answers!</string>
    <string name="you_complete_lesson_with_wrong">Unfortunately, you completed this lesson with wrong answers.\nWe
        recommend you to try to pass this lesson once again.
    </string>
    <string name="you_complete_unit_with_wrong">Unfortunately, you completed this practice with wrong answers.\nWe
        recommend you to try to pass it once again.
    </string>
    <string name="try_another">Try to pass another one!</string>
    <string name="you_scored">You scored</string>
    <string name="points">points.</string>
    <string name="because_of_it_your_time_bonus">Because of it your time-bonus is</string>
    <string name="your_practice_score">You scored in this practice</string>
    <string name="total_score">Your total score is</string>
    <string name="rate_text">Thank you for using Easy Math PRO app. We hope you have really fun of it. And we expect you
        could take a moment to rate it. Thanks a lot for your support!
    </string>
    <string name="rate_later">Not now</string>
    <string name="rate_the_app">Rate the App</string>
    <string name="rate">Rate the App</string>
    <string name="its_time">It\'s time to practice your math skills!</string>
    <!--Get PRO-->
    <string name="get_pro">Update</string>
    <string name="go_back">Back</string>
    <string name="available_in_pro">Available in\nPremium</string>
    <string name="thats_why">That\'s why we recommend you update to Premium:</string>
    <string name="available_division">1. Available to learn and practice mathematical activities of DIVISION</string>
    <string name="available_difficulty">2. More levels of complexity are available</string>
    <string name="no_ads">3. No ads any more!\n</string>
    <string name="you_will">You will have more practice to improve your math skills, including big numbers!\n...and
        score more points to beat other users and win the challenge...
    </string>
    <!--GoogleGameServices-->
    <string name="sign_in_failed" translatable="false">Failed to sign in. Please check your network connection and try
        again.
    </string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing
        certificate match the client ID created in Developer Console. Also, if the application is not yet published,
        check that the account you are trying to sign in with is listed as a tester account. See logs for more
        information.
    </string>
    <string name="license_failed" translatable="false">License check failed.</string>
    <string name="unknown_error" translatable="false">Unknown error.</string>
    <string name="signin_failure" translatable="false">Unable to sign in.</string>
    <string name="signin_other_error" translatable="false">There was an issue with sign in, please try again later.
    </string>
    <!--Buttons-->
    <string name="button_plus">ADDITION</string>
    <string name="button_minus">SUBTRACTION</string>
    <string name="button_multiply">MULTIPLICATION</string>
    <string name="button_division">DIVISION</string>

    <string name="level_mediume">INTERMEDIATE</string>
    <string name="level_hard">ADVANCED</string>
    <string name="level_easy">ELEMENTARY</string>

    <string name="start_new_game">NEW QUIZ</string>
    <string name="right_answer">Well done!</string>

    <string name="advise">Use of this 3-5 times per day helps develop child\'s intellectual abilities, spatial awareness
        and such concepts as size and shape, logical and arithmetical operations. These basic skills help children fully
        explore the world around them.
    </string>
    <string name="clouds">clouds</string>
    <string name="from">from</string>
    <string name="question">Question</string>
    <string name="record_overall">Record</string>
    <string name="record_points">Points</string>
    <string name="record_today">Points today</string>
    <string name="right_answer_is">Right answer is</string>
    <string name="wrong_answer">Wrong</string>

</resources>
