<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/get_premium_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/board"
        android:orientation="vertical"
        tools:context=".BuyPremiumActivity">
    <TextView
            android:id="@+id/get_pro_dialog_topic"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/available_in_pro"
            android:textSize="@dimen/bigText"
            android:textStyle="bold"
            android:background="@color/new_color_green_MAIN"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <ScrollView
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">
        <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/colorPinkEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/get_pro_we_recommend"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/thats_why"
                    android:textSize="@dimen/textSize_meaning"
                    android:textColor="@color/colorWhite"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/get_pro_text_01"
                    android:text="@string/available_division"
                    android:textSize="@dimen/textSize_meaning"
                    android:textColor="@color/colorWhite"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <Button android:layout_width="@dimen/get_pro_button_width"
                    android:layout_height="@dimen/get_pro_button_height"
                    android:layout_marginLeft="@dimen/margin_choice_button_horizontal"
                    android:layout_marginRight="@dimen/margin_choice_button_horizontal"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/button_division"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/buttonroundedmagenta"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:id="@+id/get_pro_text_02"
                    android:text="@string/available_difficulty"
                    android:textSize="@dimen/textSize_meaning"
                    android:textColor="@color/colorWhite"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <Button android:layout_width="@dimen/get_pro_button_width"
                    android:layout_height="@dimen/get_pro_button_height"
                    android:layout_marginLeft="@dimen/margin_choice_button_horizontal"
                    android:layout_marginRight="@dimen/margin_choice_button_horizontal"
                    android:layout_marginBottom="8dp"
                    android:text="@string/level_mediume"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/buttonroundedblue"
                    android:layout_gravity="center_horizontal"/>
            <Button android:layout_width="@dimen/get_pro_button_width"
                    android:layout_height="@dimen/get_pro_button_height"
                    android:layout_marginLeft="@dimen/margin_choice_button_horizontal"
                    android:layout_marginRight="@dimen/margin_choice_button_horizontal"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/level_hard"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/new_button_yellow"
                    android:layout_gravity="center_horizontal"/>

            <TextView
                    android:id="@+id/get_pro_no_ads"
                    android:text="@string/no_ads"
                    android:textSize="@dimen/textSize_meaning"
                    android:textColor="@color/colorWhite"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/get_pro_to_win"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/you_will"
                    android:textSize="@dimen/textSize_meaning"
                    android:textColor="@color/colorWhite"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <ImageView
                    android:id="@+id/image_smile"
                    android:src="@drawable/smile_happy_1"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_width="50dp" android:layout_height="50dp"/>

            <LinearLayout
                    android:id="@+id/premium_buttons"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center">

                <Button
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/choice_button_height"
                        android:text="@string/go_back"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/margin_between_buttons_horizontal"
                        android:layout_marginRight="@dimen/margin_between_buttons_horizontal"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:textStyle="bold"
                        android:textSize="@dimen/titleText"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/buttonroundedblue"
                        android:id="@+id/premium_back"
                        android:onClick="onClickGoBack"/>
                <Button
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/choice_button_height"
                        android:text="@string/get_pro"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/margin_between_buttons_horizontal"
                        android:layout_marginLeft="@dimen/margin_between_buttons_horizontal"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:textStyle="bold"
                        android:textSize="@dimen/titleText"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/buttonroundedgreen"
                        android:id="@+id/premium_purchase"
                        android:onClick="onClickPremium"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
