<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/board"
        tools:context="com.arturagapov.easymathforgirls.UnitActivity">
    <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/choice_button_height"
            android:layout_marginTop="@dimen/margin_top_for_button"
            android:layout_marginLeft="@dimen/margin_choice_button_horizontal"
            android:layout_marginRight="@dimen/margin_choice_button_horizontal"
            android:layout_centerHorizontal="true"
            android:text="@string/button_plus"
            android:textStyle="bold"
            android:textSize="@dimen/titleText"
            android:textColor="@color/colorWhite"
            android:background="@drawable/buttonroundedgreen"
            android:id="@+id/button1"
            android:onClick="onClickPlus"/>
    <Button android:layout_width="match_parent"
            android:layout_height="@dimen/choice_button_height"
            android:layout_below="@+id/button1"
            android:layout_marginTop="@dimen/margin_between_buttons_vertical"
            android:layout_marginLeft="@dimen/margin_choice_button_horizontal"
            android:layout_marginRight="@dimen/margin_choice_button_horizontal"
            android:layout_centerHorizontal="true"
            android:text="@string/button_minus"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/new_button_yellow"
            android:id="@+id/button2"
            android:onClick="onClickMinus"/>
    <Button android:layout_width="match_parent"
            android:layout_height="@dimen/choice_button_height"
            android:layout_marginTop="@dimen/margin_between_buttons_vertical"
            android:layout_marginLeft="@dimen/margin_choice_button_horizontal"
            android:layout_marginRight="@dimen/margin_choice_button_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/button2"
            android:text="@string/button_multiply"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/buttonroundedblue"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickMultiply"/>
    <Button android:layout_width="match_parent"
            android:layout_height="@dimen/choice_button_height"
            android:layout_marginTop="@dimen/margin_between_buttons_vertical"
            android:layout_marginLeft="@dimen/margin_choice_button_horizontal"
            android:layout_marginRight="@dimen/margin_choice_button_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/button3"
            android:text="@string/button_division"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/buttonroundedgrey"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickDivision"/>
    <ImageView
            android:src="@drawable/new_bottom_clouds_back"
            android:layout_alignParentBottom="true"
            android:scaleType="fitEnd"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>

</RelativeLayout>
